v0.6.x/_sources/reference/fury.ui.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`ui`
=========
.. automodule:: fury.ui

.. currentmodule:: fury.ui
.. autosummary::

   Button2D
   Checkbox
   ComboBox2D
   CustomInteractorStyle
   Disk2D
   FileMenu2D
   GridUI
   ImageContainer2D
   LineDoubleSlider2D
   LineSlider2D
   ListBox2D
   ListBoxItem2D
   Number
   Option
   OrderedDict
   Panel2D
   RadioButton
   RangeSlider
   Rectangle2D
   RingSlider2D
   TextBlock2D
   TextBox2D
   UI
   clip_overflow
   grid
   load_image
   read_viz_icons
   rotate
   set_input
   warn


.. currentmodule:: fury.ui


:class:`Button2D`
~~~~~~~~~~~~~~~~~


.. autoclass:: Button2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Checkbox`
~~~~~~~~~~~~~~~~~


.. autoclass:: Checkbox
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ComboBox2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ComboBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CustomInteractorStyle`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CustomInteractorStyle
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Disk2D`
~~~~~~~~~~~~~~~


.. autoclass:: Disk2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FileMenu2D`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: FileMenu2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GridUI`
~~~~~~~~~~~~~~~


.. autoclass:: GridUI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageContainer2D`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageContainer2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineDoubleSlider2D`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineDoubleSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LineSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LineSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ListBoxItem2D`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ListBoxItem2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Number`
~~~~~~~~~~~~~~~


.. autoclass:: Number
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Option`
~~~~~~~~~~~~~~~


.. autoclass:: Option
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OrderedDict`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OrderedDict
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Panel2D`
~~~~~~~~~~~~~~~~


.. autoclass:: Panel2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RadioButton`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RadioButton
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RangeSlider`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RangeSlider
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Rectangle2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Rectangle2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RingSlider2D`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RingSlider2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBlock2D`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBlock2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TextBox2D`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TextBox2D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`UI`
~~~~~~~~~~~


.. autoclass:: UI
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

clip_overflow
~~~~~~~~~~~~~

.. autofunction:: clip_overflow

grid
~~~~

.. autofunction:: grid

load_image
~~~~~~~~~~

.. autofunction:: load_image

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons

rotate
~~~~~~

.. autofunction:: rotate

set_input
~~~~~~~~~

.. autofunction:: set_input

warn
~~~~

.. autofunction:: warn

